scrollbar fixed

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -120,7 +120,7 @@ header {
 .skill-list {
   display: grid;
   grid-template-columns: repeat(3, auto);
-  gap: 50px;
+  gap: 30px;
   justify-content: center;
 }
 
@@ -311,6 +311,7 @@ header {
 
   .skill-list {
     grid-template-columns: auto auto;
+    gap: 15px;
   }
 }
 
@@ -348,6 +349,31 @@ header {
   }
 
   .skill-list {
-    grid-template-columns: auto;
+    gap: 5px;
+  }
+
+  .skill-list li {
+    padding: 0;
+    gap: 5px;
+    width: 80px;
+    height: 80px;
+    justify-content: center;
+  }
+
+  .skill-icon {
+    width: 30px;
+    height: 30px;
+  }
+
+  .skills-p {
+    font-size: 0.9rem;
+  }
+
+  .skill-list li:hover .skills-p {
+    font-size: 0.7rem;
+  }
+
+  .contact-list {
+    font-size: 0.9rem;
   }
 }
